# Visual-Icon-Maker

./: CHANGELOG  LICENSE  LICENSE-DARK.md  LICENSE.txt  README.md  main.cpp  main.mm  runit.sh
Visual Icon Maker.app/Contents/: Info.plist
Visual Icon Maker.app/Contents/MacOS/: IconMaker
Visual Icon Maker.app/Contents/Resources/: icon.icns
raylib-icon-maker-ANDROID/: build_android.sh  local.properties  settings.gradle
raylib-icon-maker-ANDROID/app/: build.gradle
raylib-icon-maker-ANDROID/app/src/main/: AndroidManifest.xml
raylib-icon-maker-ANDROID/app/src/main/cpp/: CMakeLists.txt  TargetConditionals.h  main.cpp  test
raylib-icon-maker-ANDROID/app/src/main/res/layout/: activity_main.xml
raylib-icon-maker-LINUX/: Dockerfile  main.cpp
raylib-icon-maker-LINUX/Visual Icon Maker.AppDir/: AppRun  IconMaker.desktop
raylib-icon-maker-WINDOWS/: TargetConditionals.h  main.cpp  runit.sh
raylib-icon-maker-WINDOWS/Visual Icon Maker/: README.txt
tinyfiledialogs/: IconMaker  hello.c  rnit.sh
